--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "ele-alien",
-  "version": "0.1.0",
-  "private": true,
+  "description": " A Vue.js elementui componenty",
+  "version": "0.1.3",
+  "author": "Cary <798171920@qq.com>",
+  "private": false,
+  "main": "dist/c-ele-aliencommon.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:npm": "vue-cli-service build --target lib --name c-ele-alien src/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "element-ui": "^2.7.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
