--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ele-alien",
   "description": " A Vue.js elementui componenty",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "author": "Cary <798171920@qq.com>",
   "private": false,
   "main": "dist/c-ele-aliencommon.js",
@@ -9,8 +9,19 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:npm": "vue-cli-service build --target lib --name c-ele-alien src/index.js",
+    "push": "npm run build:npm && npm publish",
     "lint": "vue-cli-service lint"
   },
+  "homepage": "https://github.com/jian22446688/ele-alien",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:jian22446688/ele-alien.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jian22446688/ele-alien/issues"
+  },
+  "unpkg": "dist/c-ele-alien.common.js",
   "dependencies": {
     "core-js": "^2.6.5",
     "element-ui": "^2.7.2",
