--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ele-alien",
   "description": " A Vue.js elementui componenty",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "author": "Cary <798171920@qq.com>",
   "private": false,
   "main": "./dist/c-ele-alien.common.js",
@@ -35,6 +35,7 @@
     "@vue/cli-plugin-eslint": "^3.6.0",
     "@vue/cli-service": "^3.6.0",
     "babel-eslint": "^10.0.1",
+    "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.5.21"
